# Chessie

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Applications/: CMakeLists.txt
Applications/Chessie/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.ui
Applications/Chessie/Source/: App.cpp  Main.cpp  MainWindow.cpp  MainWindow.h
Applications/Chessie/Source/Include/: App.h
Libraries/: CMakeLists.txt
Libraries/ChessieCommon/Include/: ChessieContainer.h
Libraries/ChessieCore/: CMakeLists.txt  ChessieAllocator.cpp  ChessieByteArray.cpp  ChessieContainer.cpp  ChessieDefaultAllocator.cpp  ChessieUtilities.cpp
Libraries/ChessieCore/ChessieCore/: ChessieAllocator.h  ChessieByteArray.h  ChessieCommon.h  ChessieContainer.h  ChessieDefaultAllocator.h  ChessieIAllocator.h  ChessieObject.h  ChessieUtilities.h
Libraries/ChessieCore/Include/: ChessieAllocator.h  ChessieByteArray.h  ChessieCommon.h  ChessieContainer.h  ChessieDefaultAllocator.h  ChessieIAllocator.h  ChessieUtilities.h
Libraries/ChessieEthernet/: CMakeLists.txt  ChessieEthernet.cpp
Objects/: CMakeLists.txt
Objects/ChessieBaseScene/: CMakeLists.txt  ChessieBaseScene.cpp
Objects/ChessieBaseScene/ChessieBaseScene/: ChessieBaseScene.h
Objects/ChessiePathPlanner/: CMakeLists.txt  ChessiePathPlanner.cpp
Objects/ChessiePathPlanner/ChessiePathPlanner/: ChessiePathPlanner.h
Objects/ChessiePendulum/: CMakeLists.txt  ChessiePendulum.cpp
Objects/ChessiePendulum/ChessiePendulum/: ChessiePendulum.h
Objects/ChessieSyntaxObject/: CMakeLists.txt  ChessieSyntaxObject.cpp
Objects/ChessieSyntaxObject/ChessieSyntaxObject/: ChessieSyntaxObject.h
Tests/: CMakeLists.txt  TestAllocator.cpp  TestAllocator.h  UnitTest.cpp  UnitTest.h
Widgets/: CMakeLists.txt
Widgets/ChessieBaseWidget/: CMakeLists.txt  ChessieBaseWidget.cpp
Widgets/ChessieBaseWidget/ChessieBaseWidget/: ChessieBaseWidget.h
Widgets/ChessieGraphicWidget/: CMakeLists.txt  ChessieGraphicWidget.cpp  ChessieGraphicWidget.ui
Widgets/ChessieGraphicWidget/ChessieGraphicWidget/: ChessieGraphicWidget.h
