##############################################################################################

add_subdirectory(ChessieCore)

##############################################################################################

add_subdirectory(ChessieEthernet)

##############################################################################################

install(
    EXPORT ChessieLibrary-config
    NAMESPACE chessielib::
    DESTINATION ${PROJECT_SOURCE_DIR}/cmake)

##############################################################################################